--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.522.0",
+    "mapbox-gl": "^3.13.0",
     "mongoose": "^8.16.0",
     "next": "15.3.4",
     "react": "^19.0.0",
